--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 			border-radius: 3px;
 			padding: 24px;
 			margin: 24px -24px;
-            width: 50%;
-            float: left;
+            width: 40%;
+			position: relative;
 		}
         div.intro {
             width: 100%;
-            height:auto;
+			display: flex;
+			justify-content: space-between;
         }
 	</style>
 </head>
@@ -65,7 +66,7 @@
                     [<a href="https://github.com/arkabhat" target="_blank">GitHub</a>]
                 </div>
             </section>
-            <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="width:40%;float:right;">
+            <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="width:50%;height:auto;position:relative;">
         </div>
 
 		<section style="width:100%;">
