--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 			position: relative;
 		}
         div.intro {
-            width: 100%;
 			display: flex;
 			justify-content: space-between;
         }
@@ -66,7 +65,7 @@
                     [<a href="https://github.com/arkabhat" target="_blank">GitHub</a>]
                 </div>
             </section>
-            <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="width:50%;height:auto;position:relative;">
+            <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="display: block;width:40%;height:fit-content;">
         </div>
 
 		<section style="width:100%;">
