--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			border-radius: 3px;
 			padding: 24px;
 			margin: 24px -24px;
-            width: 40%;
+            width: 100%;
 			position: relative;
 		}
         div.intro {
@@ -65,7 +65,7 @@
                     [<a href="https://github.com/arkabhat" target="_blank">GitHub</a>]
                 </div>
             </section>
-            <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="display: block;width:40%;height:fit-content;">
+            <!-- <img src="images/bhattacharya_arka_photo.JPG" alt="Arka's Profile Photo" style="display: block;width:40%;height:fit-content;"> -->
         </div>
 
 		<section style="width:100%;">
